--- a/.github/workflows/nightly_spider.yml
+++ b/.github/workflows/nightly_spider.yml
@@ -2,22 +2,19 @@ name: Nightly Tennis-Court Scraper
 
 on:
   schedule:
-    - cron: '02 19 * * *'          # 09 : 52 Pacific
+    - cron: '22 19 * * *'          # 09:52 Pacific (adjust as needed)
   workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Install flyctl
-        run: |
-          curl -L https://fly.io/install.sh | sh
-          echo "$HOME/.fly/bin" >> "$GITHUB_PATH"
+      - uses: superfly/flyctl-actions/setup-flyctl@v1   # 2-second install
 
-      - name: Authenticate to Fly
+      - name: Fly auth
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}   # Deploy token you created
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: flyctl auth login --access-token "$FLY_API_TOKEN"
 
-      - name: Start scraper machine
-        run: flyctl machine start e2867d5f615e38
+      - name: Start scraper machine (return immediately)
+        run: flyctl machine start e2867d5f615e38 --wait=false
