--- a/.github/workflows/nightly_spider.yml
+++ b/.github/workflows/nightly_spider.yml
@@ -2,21 +2,19 @@ name: Nightly Tennis-Court Scraper
 
 on:
   schedule:
-    - cron: '52 16 * * *'      # 09:52 PDT
+    - cron: '52 16 * * *'        # 09:52 PDT
   workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: superfly/flyctl-actions/setup-flyctl@v1
+      - uses: superfly/flyctl-actions/setup-flyctl@v1   # 2 s install
 
-      - name: Debug token length
+      - name: Show token length (debug only)
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        run: |
-          echo "Token length: ${#FLY_API_TOKEN}"
-          [ -z "$FLY_API_TOKEN" ] && { echo "FLY_API_TOKEN is EMPTY"; exit 1; }
+        run: echo "Token length: ${#FLY_API_TOKEN}"
 
       - name: Fly auth
         env:
