--- a/.github/workflows/nightly_spider.yml
+++ b/.github/workflows/nightly_spider.yml
@@ -2,22 +2,19 @@ name: Nightly Tennis-Court Scraper
 
 on:
   schedule:
-    # 09:52 Pacific Daylight = 16:52 UTC
-    - cron: '52 16 * * *'
+    - cron: '52 16 * * *'          # 09:52 Pacific
   workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
+    env:
+      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}   # ← your deploy token
     steps:
       - uses: superfly/flyctl-actions/setup-flyctl@v1
 
-      - run: echo "Has token? ${{ secrets.FLY_API_TOKEN != '' }}"
-
-      - name: Fly auth
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        run: flyctl auth login --access-token "$FLY_API_TOKEN"
+      - name: Confirm token present
+        run: echo "Has token? ${{ secrets.FLY_API_TOKEN != '' }}"
 
       - name: Start scraper machine
-        run: flyctl machine start e2867d5f615e38 --wait=false
+        run: flyctl --access-token "$FLY_API_TOKEN" machine start e2867d5f615e38 --wait=false
