--- a/.github/workflows/nightly_spider.yml
+++ b/.github/workflows/nightly_spider.yml
@@ -1,21 +1,36 @@
 name: Nightly Tennis-Court Scraper
-
 on:
-  schedule:
-    # 23:45 Pacific Daylight = 06:45 UTC
-    - cron: '05 15 * * *'
-  workflow_dispatch:
-
+ schedule:
+   # 23:45 Pacific Daylight = 06:45 UTC
+   - cron: '50 15 * * *'
+ workflow_dispatch:
 jobs:
-  run:
-    runs-on: ubuntu-latest
-    env:
-      FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}   # your deploy token
-    steps:
-      - uses: superfly/flyctl-actions/setup-flyctl@v1
-
-      - name: Verify token is present
-        run: echo "Has token? ${{ secrets.FLY_API_TOKEN != '' }}"
-
-      - name: Start scraper machine
-        run: flyctl --access-token "$FLY_API_TOKEN" machine start e2867d5f615e38
+ run:
+   runs-on: ubuntu-latest
+   env:
+     FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+   steps:
+     - uses: superfly/flyctl-actions/setup-flyctl@v1
+     - name: Verify token is present
+       run: echo "Has token? ${{ secrets.FLY_API_TOKEN != '' }}"
+     - name: Run scraper and wait for completion
+       run: |
+         flyctl --access-token "$FLY_API_TOKEN" machine start e2867d5f615e38 --app flyscraper
+         
+         # Wait for the machine to finish (poll every 30 seconds, max 15 minutes)
+         for i in {1..30}; do
+           status=$(flyctl --access-token "$FLY_API_TOKEN" machine status e2867d5f615e38 --app flyscraper --json | jq -r '.state')
+           echo "Machine status: $status"
+           
+           if [ "$status" = "stopped" ]; then
+             echo "Machine completed successfully"
+             break
+           fi
+           
+           if [ $i -eq 30 ]; then
+             echo "Timeout: Machine did not complete within 15 minutes"
+             exit 1
+           fi
+           
+           sleep 30
+         done
